fixed the footer and the portfolio page spacing issue

--- a/wp-content/themes/christophe/style.css
+++ b/wp-content/themes/christophe/style.css
@@ -203,7 +203,6 @@ section.vcenter {
 	background-color: #161614;
 	padding: 15px 0;
 	position:absolute;
-	bottom:0;
 	width:100%;
 	z-index: 99;
 }
@@ -497,11 +496,19 @@ input.form-control:active, input.form-control:focus, textarea.form-control:activ
     color: white;
     text-transform: capitalize;
 }
-.element-item {
-    padding: 0 5px 0 5px;
+.grid-item {
+    /*padding: 0 5px 0 5px;
     margin-bottom: 20px;
-	margin-right: 0;
+	margin-right: 0;*/
+	    /*display: block;
+    float: left;*/
+    margin-bottom: 20px;
+    border-radius: 5px;
 	cursor: pointer;
+}
+.grid-item  img{
+   /*display: block;
+   max-width: 100%;*/
 }
 .element-item div{
     padding: 0;
@@ -537,6 +544,7 @@ input.form-control:active, input.form-control:focus, textarea.form-control:activ
     text-align: center;
 	height: 100%;
 	color: white;
+	justify-content: center;
 }
 
 @media only screen and (max-width: 480px) {
@@ -573,3 +581,10 @@ input.form-control:active, input.form-control:focus, textarea.form-control:activ
 		background-position: 90% center;
 	}
 }
+
+.grid {
+  max-width: 1200px;
+}
+
+
+
